# jersi-certu

./: README.md  game-fox-vs-lucas.txt  jersi_certu.py  jersi_certu_4.py  jersi_drawer.py  jersi_gui.py  jersi_rules.py  jersi_start.bat  jersi_start.py  learn_about_tk_progress_bar.py  pos.txt  pos_end.txt  requirements.txt  setup.cfg  setup.py  toto.txt  tutu.txt
docs/: AI-Design.md  CLI-3.md  COPYRIGHT.md  INSTALL.md  New-Architecture.md  TODO.md  UML-Schema.graphml  another_new_architecture.py  calibration-minimax-1.txt  calibration-minimax-2.txt  new_architecture.py  text-board.txt
games/: Fox-Lucas-2021-0425.txt  Kerry-Lucas-2021-1011.txt  Rulebook-example-2020-0330.txt
jersi-certu-3/: game-1-ai-certu-versus-lucas.txt  game-2-ai-certu-versus-lucas.txt  game-3-fox-versus-ai-certu.txt  game-fox-versus-lucas.txt  positions-at-move-19.txt  positions-last-count-triggered-at-next-move.txt
jersi_certu/: __init__.py  jersi_build_app.py  jersi_gui.py  jersi_rules.py
