[metadata]
name = jersi_certu
version = 1.0.0
url = https://github.com/LucasBorboleta/jersi-certu
author = Lucas Borboleta
author_email = lucas.borboleta@free.fr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = GUI and a rules engine for playing the jersi board-game and for testing AI agents
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = docs/LICENSE.txt
packages = ['jersi_certu_lucas_borboleta_4']

[options]
python_requires = >=3.8
install_requires =
    mcts>=1.0.4
    Pillow>=8.1.0
